--- a/index.html
+++ b/index.html
@@ -2458,9 +2458,9 @@
             <div class="footer-bottom">
                 <div class="container">
                     <p class="copyright">
-                        &copy; 2022
-                        <a href="#" class="copyright-link">codewithsadee</a>.
-                        All Rights Reserved.
+                        &copy; 2024
+                        <a href="#" class="copyright-link">Mazen Saad</a>. All
+                        Rights Reserved.
                     </p>
 
                     <ul class="footer-bottom-list">
